Fix button styles bug on iOS devices.

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -24,7 +24,7 @@
     background-size: contain;
     display: inline-block;
     @include transition('all, 0.4s, ease-in-out');
-
+    margin-left: 1rem;
     height: 1.125rem;
     width: 1.125rem;
   }
